--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   }
   
   .archive {
-    background-image: url('/src/images/wtm8.jpg');
+    /* background-image: url('/src/images/wtm8.jpg'); */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -26,7 +26,7 @@
   }
   
   .about {
-    background-image: url('/src/images/wtm10.jpg');
+    /* background-image: url('/src/images/wtm10.jpg'); */
     background-position: center;
     background-size: fill;
     background-repeat: no-repeat;
@@ -35,7 +35,7 @@
   }
   
   .onlywatame {
-    background-image: url('/src/images/wtm9.gif');
+    /* background-image: url('/src/images/wtm9.gif'); */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
